feature: Lidl site parsing reneued